--- a/_config.yml
+++ b/_config.yml
@@ -101,4 +101,6 @@ theme: A4
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: 'git'
+  repository: https://github.com/EvansLeeSin/EvansLeeSin.github.io
+  branch: main
