--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,9 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: A4
 
+#打包压缩
+all_minifier: true
+
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
